--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,10 +3,8 @@
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
-
   height: 60px;
   padding: 0 50px;
-
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 
   &__logo {
@@ -27,7 +25,7 @@
     list-style: none;
     line-height: 60px;
 
-    transition: ease 300ms;
+    transition: color ease 300ms;
 
     &:not(:last-child) {
       margin-right: 20px;
