--- a/src/styles/blocks/catalog.scss
+++ b/src/styles/blocks/catalog.scss
@@ -17,7 +17,7 @@
     border-radius: 5px;
     margin-bottom: 48px;
 
-    transition: transform ease 300ms, color ease 300ms;
+    transition: transform 300ms ease, color 300ms ease;
 
     &:not(:nth-child(4n)) {
       margin-right: 48px;
