--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -25,7 +25,7 @@
     list-style: none;
     line-height: 60px;
 
-    transition: color ease 300ms;
+    transition: color 300ms ease;
 
     &:not(:last-child) {
       margin-right: 20px;
